# finance-app

./: .gitignore  alembic.ini  package-lock.json  package.json  pyproject.toml  pytest.ini
app/: main.py
app/auth/: authenticate.py  hash_password.py  jwt_handler.py
app/database/: base.py  connection.py
app/models/: categories.py  operations.py  users.py
app/routes/: categories.py  dependencies.py  operations.py  users.py
app/schemas/: categories.py  operations.py  users.py
app/tests/: conftest.py  test_auth.py  test_categories.py  test_operations.py  test_users.py
migrations/: env.py
migrations/versions/: 2026-01-08_add_users_categories_operations.py
public/: index.html
src/: index.css  index.js
src/blocks/add-category-popup/: add-category-popup.css
src/blocks/add-operation-popup/: add-operation-popup.css
src/blocks/avatar-popup/: avatar-popup.css
src/blocks/body/: body.css
src/blocks/budget-popup/: budget-popup.css
src/blocks/category-popup/: category-popup.css
src/blocks/footer/: footer.css
src/blocks/header/: header.css
src/blocks/loader/: loader.css
src/blocks/login/: login.css
src/blocks/main/: main.css
src/blocks/profile/: profile.css
src/components/: AddCategoryPopup.jsx  AddOperationPopup.jsx  App.jsx  BarChart.jsx  BudgetLimitPopup.jsx  Footer.jsx  Header.jsx  LineChart.jsx  Loader.jsx  Login.jsx  Main.jsx  PieChart.jsx  PolarAreaChart.jsx  Profile.jsx  Registration.jsx  UpdateAvatarPopup.jsx
src/slices/: authSlice.js  categoriesSlice.js  index.js  operationsSlice.js  usersSlice.js
src/slices/api/: usersApi.js  (+2 more)
(+64 files in other folders)
